--- a/styles/main.css
+++ b/styles/main.css
@@ -17,6 +17,7 @@ body {
   max-width: 430px;
   height: 100vh;
   position: relative;
+  font-size: 18px;
 }
 
 .temporary {
@@ -30,11 +31,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 30px;
-  height: 30px;
+  width: 60px;
+  height: 60px;
   border: 1px solid gray;
+  font-size: 20px;
 }
 
 .btn {
-  padding: 5px;
+  padding: 15px 25px;
 }
